--- a/ArachnID/mainwindow.ui
+++ b/ArachnID/mainwindow.ui
@@ -27,7 +27,7 @@
      <string>Spider</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="dumpButton">
     <property name="geometry">
      <rect>
       <x>325</x>
